<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">来动吧</string>
    <string name="action_settings">退出</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Description</string>
    <string name="register_login">注册	|	登录</string>
    <string name="random_look">随便看看></string>
    <string name="appname">来动吧</string>
    <string name="stadium_name">场馆名称</string>
    <string name="setting">人个中心</string>
    <string name="specify_detail">详细资料</string>
    <string name="personal_setting">个人设置</string>
    <string name="notification">通知</string>
    <string name="bind_information">绑定消息</string>
    <string name="not_bind">未绑定</string>
    <string name="cancel">注销</string>
    <string name="brokethespace">爆料空间</string>
    <string name="notspeechsecrect">不能说的秘密</string>
    <string name="notspeechsecrect_details">不能说的秘密-详情</string>
    <string name="stadium_news">场馆新闻</string>
    <string name="stadium_query">场馆查询</string>
    <string name="private_formulate">私人定制</string>
    <string name="favorable_plan">优惠活动</string>
    <string name="stadium_specify">场馆详情</string>
    <string name="base_information">基本信息</string>
    <string name="address">地址：</string>
    <string name="telephone">电话：</string>
    <string name="stadium_instr">场馆介绍</string>
    <string name="user_assess">用户评价</string>
    <string name="domain_invitation_war">地盘约战</string>
    <string name="joinact">加入应战</string>
    <string name="joinact_detail">加入应战-详情</string>
    <string name="friend_replay">发起活动</string>
    <string name="friend_recommend">活动查询</string>
    <string name="login">登    录</string>
    <string name="register">注    册</string>
    <string name="forget_secrect_eroteme">忘记密码?</string>
    <string name="secrect">密码</string>
    <string name="remember_secrect"> 记住密码</string>
    <string name="auto_login"> 自动登录</string>
    <string name="phone_or_email">邮箱/场馆汇帐号</string>
    <string name="about_us">关于我们</string>
    <string name="user_update">更新用户资料</string>
    <string name="new_password">新 密 码:</string>
    <string name="new_password_hint">新 密 码</string>
    <string name="new_nickname">新 昵 称:</string>
    <string name="new_nickname_hint">新 昵 称</string>
    <string name="new_age_segment">年		龄:</string>
    <string name="new_age_segment_hint">年	龄</string>
    <string name="sex">性别</string>
    <string name="update_data">更 新 资 料</string>
    <string name="stadium_area">场馆所在区域</string> 
    <string name="confirm">确	定</string>
    <string name="order">预	约</string>
    <string name="stadium_order">场馆预约</string>
    <string name="already_use">已使用</string>
    <string name="not_use">未使用</string>
    <string name="my_order">我的预约</string>
    <string name="order_ticket">预约券</string>
    <string name="retreat_order">退订</string>
    <string name="condition_query">条件查询场馆</string>
    <string name="venues_admin">场馆管理</string>
    
    
    
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <!-- 关于我们 -->
    <string name="about_us_contant">\t\t\t来动吧app的出现，将一举改变订场难、信息不及时的全民运动健身市场现状。为受众提供包括羽毛球、网球、足球、篮球等在内的多种大众球类运动项目的实时在线预订与信息查询服务。\n
        	在线业务的出现也奖在一定程度上为他们缓解黄金时段球馆爆满，球友订不到场地;非黄金时段冷场，工作人员没事可做的局面。场馆汇为场馆经营者提供一丫式场馆预定解决方案，免费为场馆植入场馆预订管理系统，帮助场馆经营者有效管理场地、提高场地使用率、增加营业收入。</string>
    
    <!-- ListView下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
	<!-- GridView下拉刷新 -->
	<string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
</resources>